force-app/main/default/objects/CommitmentRiskSection__mdt/CommitmentRiskSection__mdt.object-meta.xml
<CustomObject>
    <description>This Section Will Be dynamically  Calculate the commitment Risk</description>
    <label>CommitmentRiskSection</label>
    <pluralLabel>CommitmentRiskSection</pluralLabel>
</CustomObject>