force-app/main/default/objects/CommitmentRiskSection__mdt/fields/Question_weightage__c.field-meta.xml
<CustomField>
    <fullName>Question_weightage__c</fullName>
    <label>Question weightage</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>