force-app/main/default/objects/CommitmentRiskSection__mdt/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <label>Section Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>