force-app/main/default/objects/CommitmentRiskSection__mdt/fields/SectionqQuestion__c.field-meta.xml
<CustomField>
    <fullName>SectionqQuestion__c</fullName>
    <description>Put a Question in comma separated</description>
    <label>SectionqQuestion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>