force-app/main/default/objects/CommitmentRiskSection__mdt/fields/YesOrNo__c.field-meta.xml
<CustomField>
    <fullName>YesOrNo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>YesOrNo</label>
    <type>Checkbox</type>
</CustomField>